# trabalho-ed2

./: CMakeLists.txt  main.c
arquivo/: arquivo.c  arquivo.h
estruturas/: cliente.c  cliente.h  objeto.c  objeto.h
header/: No.h  arquivo.h  arvore_vencedores.h  cliente.h  objeto.h  selecao_substituicao.h  utils.h
intercalacao/: arvore_vencedores.c  arvore_vencedores.h
selecao/: selecao_natural.c  selecao_natural.h  selecao_substituicao.c  selecao_substituicao.h
source/: No.c  arquivo.c  arvore_vencedores.c  cliente.c  objeto.c  selecao_substituicao.c  utils.c
